--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "18_AUTH_NODE_JWT",
+  "name": "BackEndPDM",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -12,10 +12,8 @@
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.0.1",
-    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.12"
+    "mongoose": "^6.9.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.14"
