--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "dotenv": "^16.0.3",
     "express": "^4.17.1",
-    "mongoose": "^6.9.0"
+    "mongoose": "^6.9.0",
+    "nodemailer": "^6.9.1",
+    "nodemailer-express-handlebars": "^6.0.0",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.14"
