--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.3",
+    "@react-navigation/elements": "^1.3.14",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
     "@react-navigation/stack": "^6.3.11",
@@ -20,6 +21,7 @@
     "formik": "^2.2.9",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-maps": "1.3.2",
     "react-native-safe-area-context": "4.4.1",
     "yup": "^0.32.11"
   },
