--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "mongoose": "^6.9.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
     "nodemailer-express-handlebars": "^6.0.0",
     "path": "^0.12.7"
