--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native": "0.70.5",
     "react-native-maps": "1.3.2",
     "react-native-safe-area-context": "4.4.1",
+    "react-native-unordered-list": "^1.0.4",
     "yup": "^0.32.11"
   },
   "devDependencies": {
